tests/snapshots/render_snapshots__board_view_with_active_piece_and_ghost.snap
---
source: tests/render_snapshots.rs
expression: buf_to_string(&terminal)
---
                      
                      
        TT            
      TTTTTT          
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
        []            
      [][][]          
OOOOOOOOOOOOOOOOOOOO  
OOOOOOOOOOOOOOOOOOOO  
OOOOOOOOOOOOOOOOOOOO
