tests/snapshots/render_snapshots__board_view_with_locked_stack.snap
---
source: tests/render_snapshots.rs
expression: buf_to_string(&terminal)
---
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
                      
IIOOIIOOIIOOIIOOIIOO  
IIOOIIOOIIOOIIOOIIOO  
IIOOIIOOIIOOIIOOIIOO  
IIOOIIOOIIOOIIOOIIOO  
IIOOIIOOIIOOIIOOIIOO
