tests/snapshots/render_snapshots__game_over_overlay_new_best.snap
---
source: tests/render_snapshots.rs
expression: buf_to_string(&terminal)
---
┌Stats───────────────┐
│SCORE               │
│      254           │
│                    │
┌────────────────────┐
│                    │
│      GAME OVER     │
│      NEW BEST!     │
│            254     │
│      r: restart    │
└────────────────────┘
│ I I                │
│ O O                │
│ T T                │
└────────────────────┘
