tests/snapshots/render_snapshots__game_over_overlay_regular.snap
---
source: tests/render_snapshots.rs
expression: buf_to_string(&terminal)
---
┌Stats─────────────┐
│SCORE             │
│      754         │
│                  │
│LEVEL             │
┌──────────────────┐
│                  │
│     GAME OVER    │
│     r: restart   │
└──────────────────┘
│ L L              │
│ I I              │
│ O O              │
│ T T              │
└──────────────────┘
