tests/snapshots/render_snapshots__hud_empty_state.snap
---
source: tests/render_snapshots.rs
expression: snapshot
---
┌Stats─────────────┐
│SCORE             │
│        0         │
│                  │
│LEVEL             │
│  1               │
└──────────────────┘
┌Next──────────────┐
│NEXT              │
│ O O              │
│ J J              │
│ Z Z              │
│ L L              │
│ I I              │
└──────────────────┘
