tests/snapshots/render_snapshots__hud_hold_empty.snap
---
source: tests/render_snapshots.rs
expression: buf_to_string(&terminal)
---
╭ stats ───────────╮
│score  0          │
│                  │
│level  1          │
│lines  0          │
│                  │
╰──────────────────╯
╭ hold ────────────╮
│                  │
│                  │
│                  │
╰──────────────────╯
╭ next ────────────╮
│    LL            │
│LLLLLL            │
│                  │
│  SSSS            │
│SSSS              │
│                  │
╰──────────────────╯
