tests/snapshots/render_snapshots__hud_no_color_mode.snap
---
source: tests/render_snapshots.rs
expression: buf_to_string(&terminal)
---
┌Stats─────────────┐
│SCORE             │
│        0         │
│                  │
│LEVEL             │
│  1               │
└──────────────────┘
┌Next──────────────┐
│NEXT              │
│ L L              │
│ S S              │
│ T T              │
│ O O              │
│ J J              │
└──────────────────┘
